Fix: aligned score text upright in progress ring

--- a/templates/result.html
+++ b/templates/result.html
@@ -55,7 +55,7 @@
         }
 
         .ring svg {
-            transform: rotate(-90deg);
+            transform: rotate(0deg);
         }
 
         .ring circle {
@@ -93,7 +93,7 @@
                 <div class="ring">
                     <svg width="160" height="160">
                         <circle r="70" cx="80" cy="80" stroke="#e9ecef"/>
-                        <circle id="progressRing" r="70" cx="80" cy="80" stroke="#0d6efd" stroke-dasharray="440" stroke-dashoffset="440"/>
+                        <circle id="progressRing" r="70" cx="80" cy="80" stroke="#0d6efd" stroke-dasharray="440" stroke-dashoffset="440" transform="rotate(-90 80 80)"/>
                         <text x="80" y="88">{{ score }}%</text>
                     </svg>
                 </div>
@@ -145,8 +145,6 @@
             ring.style.strokeDashoffset = offset;
         }, 300);
     </script>
-    
-    
 
 </body>
 </html>
