--- a/templates/result.html
+++ b/templates/result.html
@@ -69,6 +69,8 @@
       dominant-baseline: middle;
       text-anchor: middle;
       fill: #0d6efd;
+      transform: rotate(90deg);
+      transform-origin: center;
     }
 
     body.dark-mode .ring text {
